finished power grid functionality

--- a/src/main/resources/extraenhancementsmod/localization/eng/CardStrings.json
+++ b/src/main/resources/extraenhancementsmod/localization/eng/CardStrings.json
@@ -21,12 +21,8 @@
   },
   "${modID}:PowerGrid": {
     "NAME": "Power Grid",
-    "DESCRIPTION": "Every time you channel an orb, gain 2 block.",
-    "UPGRADE_DESCRIPTION": "This will automatically be used if the card is upgraded. Remove it if unneeded.",
-    "EXTENDED_DESCRIPTION": [
-      "You can put more text in here.",
-      "If you need to use it for stuff.",
-      "Blizzard is a good example for this."
-    ]
+    "DESCRIPTION": "Every time you Channel an orb, gain !M! Block.",
+    "UPGRADE_DESCRIPTION": "",
+    "EXTENDED_DESCRIPTION": [""]
   }
 }
