--- a/src/main/resources/extraenhancementsmod/localization/eng/CardStrings.json
+++ b/src/main/resources/extraenhancementsmod/localization/eng/CardStrings.json
@@ -42,5 +42,11 @@
     "DESCRIPTION": "At the start of your turn, Channel a Plasma if you have an empty orb slot.",
     "UPGRADE_DESCRIPTION": "",
     "EXTENDED_DESCRIPTION": [""]
+  },
+  "${modID}:MagneticPulse": {
+    "NAME": "Magnetic Pulse",
+    "DESCRIPTION": "Deal !D! damage. If the enemy intends to attack, Channel a Frost.",
+    "UPGRADE_DESCRIPTION": "Deal !D! damage. If the enemy intends to attack, Channel a Frost and gain !B! Block.",
+    "EXTENDED_DESCRIPTION": [""]
   }
 }
